--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_datetime_picker: ^1.5.1
   intl: ^0.17.0
+  flutter_sms: ^2.1.1
+  flutter_phone_direct_caller:
+    git:
+      url: https://github.com/yanisalfian/flutter-phone-direct-caller.git
+      ref: fix/issue#19
+  flutter_ringtone_player: ^3.1.1
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
