--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>safe_zone</string>
+	<string>discretion</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -30,6 +30,26 @@
     <array>
       <string>tel</string>
     </array>
+          <key>NSAppleMusicUsageDescription</key>
+          <string>MyApp does not need this permission</string>
+          <key>NSCalendarsUsageDescription</key>
+          <string>MyApp does not need this permission</string>
+          <key>NSCameraUsageDescription</key>
+          <string>MyApp does not need this permission</string>
+          <key>NSContactsUsageDescription</key>
+          <string>MyApp does not need this permission</string>
+          <key>NSLocationWhenInUseUsageDescription</key>
+          <string>MyApp does not need this permission</string>
+          <key>NSMotionUsageDescription</key>
+          <string>MyApp does not need this permission</string>
+          <key>NSSpeechRecognitionUsageDescription</key>
+          <string>MyApp does not need this permission</string>
+          <key>UIBackgroundModes</key>
+          <array>
+                  <string>audio</string>
+          </array>
+          <key>NSMicrophoneUsageDescription</key>
+          <string>MyApp uses the microphone to record your speech and convert it to text.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
