--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   wechat_camera_picker: ^3.2.0+1
   geolocator: ^8.2.1
   permission_handler: ^9.2.0
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
