--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-   <application
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <application
        android:requestLegacyExternalStorage="true"
        android:label="discretion"
         android:icon="@mipmap/ic_launcher">
